--- a/Copy_of_loan_tap_case_study (1).ipynb
+++ b/Copy_of_loan_tap_case_study (1).ipynb
@@ -24,6 +24,7 @@
       "source": [
         "https://colab.research.google.com/drive/1k1rqQXAgj6jCwf_jnaM3RVTQyzrBvrAS?usp=sharing\n",
         "# link for accesing entire note book in the attached pdf some pages are lost  so please view through link"
+        "hellow avinash"
       ]
     },
     {
